# signals

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LAB.md  README.md  WARP.md  docker-compose.yml  signals.code-workspace
.github/ISSUE_TEMPLATE/: task.md
backend/: .env.example  .gitignore  .vercelignore  README.md  index.py  publish_templates.py  pyproject.toml  requirements.txt  test_email.py  vercel.json
backend/api/: __init__.py  config.py  database.py  email.py  main.py  models.py  schemas.py
backend/api/routers/: __init__.py  backtests.py  market_data.py  signals.py  subscribe.py
data/: README.md
data/indicators/: macd.py  rsi.py
data/signals/: signal_generator.py  signal_scorer.py
data/utils/: __init__.py  data_validation.py
db/: README.md  schema.sql
db/migrations/: 001_add_explanation_column.sql  001_initial_schema.sql  002_add_critical_fields.sql  README.md
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DATA-SCIENCE.md  GLOSSARY.md  IMPLEMENTATION_SUMMARY.md  MVP.md  RESOURCES.md  RUNBOOK.md  SPRINT_2_SUMMARY.md  TASK_SEEDS.md  TESTING_EMAIL_FLOW.md  TODOs.md
frontend/: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
lab/: .env.example  README.md  SETUP.md  lab_init.py  pyproject.toml
lab/lib/: db.py  strategies.py
lab/notebook_helpers/: db.py  strategies.py
lab/notebooks/: strategy_lab.py
pipe/: .env.example  .gitignore  LLM_EXPLANATIONS.md  README.md  __init__.py  mypy.ini  pyproject.toml  requirements.txt  schedules.py  settings.py  test_email_with_explanation.py  test_explanation_generator.py
pipe/data/: README.md
pipe/data/indicators/: __init__.py  macd.py
pipe/data/signals/: __init__.py  signal_generator.py  signal_scorer.py
pipe/data/signals/strategies/: base.py  crypto_momentum.py
pipe/data/sources/: __init__.py  alpha_vantage.py  yahoo.py
pipe/data/utils/: __init__.py
pipe/deployments/: __init__.py  register.py
pipe/docs/: FEATURE_FLAGS.md  LLM_EXPLANATIONS.md
pipe/flows/: __init__.py  historical_backfill.py  indicator_calculation.py  market_data_backfill.py  market_data_ingestion.py  market_data_sync.py  notification_dispatcher.py  notification_sender.py  signal_analyzer.py  signal_generation.py  signal_replay.py
pipe/lib/: README.md  __init__.py  explanation_generator.py  posthog_client.py
pipe/lib/api/: __init__.py  alpha_vantage.py  yahoo.py
pipe/lib/data/: __init__.py  validation.py
pipe/lib/indicators/: __init__.py  ema.py  macd.py  rsi.py
pipe/lib/strategies/: __init__.py  base.py  default_hold.py  stock_mean_reversion.py
pipe/scripts/: README.md
pipe/scripts/test/: manual_signal_gen.py  seed_mock_data.py
pipe/tasks/: __init__.py  data_fetching.py  data_validation.py  db.py  email_sending.py  indicators.py  market_data.py  signals.py
scripts/: README.md  seed_historical_data.py  setup_db.py  test_signals.py
(+93 files in other folders)
