[project]
name = "trading-signals-api"
version = "0.1.0"
description = "FastAPI backend for trading signals platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and Web Framework
    "fastapi>=0.104.0,<0.110.0",
    "uvicorn[standard]>=0.24.0,<0.28.0",
    "python-multipart>=0.0.6",
    # Database
    "sqlalchemy>=2.0.35",
    "psycopg[binary,pool]>=3.1.0", # Python 3.13 compatible
    # Data Validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.1.0",
    # Email Service
    "resend>=0.7.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[dependency-groups]
dev = []
